# image-depth-masking

./: .gitignore  Midas_demo.ipynb  Midas_demo.py  README.md  clean.bash  cocoURLS_2014.txt  cocoURLS_2017.txt  downloadCOCO.bash  find_mask.py  find_mask_coco.py  find_mask_mot.py  find_mask_old.py  helper_funcs.py  main.py  nz_wd.abc  profiling_mot.py  profiling_mot2.py  profiling_mot2_squished.py  pyproject.toml  requirements.txt  train2017_stats.csv  val2017_stats.csv
.github/workflows/: release.yml
cam2_imagedepthmaps/: findMask_COCO.py  find_mask_coco.py  main.py
cam2_imagedepthmaps/utils/: args.py  files.py  masking.py  models.py  version.py
image_depth_masking/: main.py
image_depth_masking/utils/: args.py  masking.py  models.py  version.py
imagedepthmasking/utils/: __init__.py  version.py
scripts/: download3D_ZeF20.bash  downloadCIFAR-10.bash  downloadCOCO_2014.bash  downloadCOCO_2017.bash  downloadCTMC_v1.bash  downloadCVPR_20MOTS.bash  downloadHT_21.bash  downloadMOTS.bash  downloadMOT_15.bash  downloadMOT_16.bash  downloadMOT_17.bash  downloadMOT_17Det.bash  downloadMOT_20.bash  downloadMOT_20Det.bash  downloadSTEP_ICCV21.bash  downloadSVHN.bash
